Added pages for group transactions